Scala fmt updates

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,18 +1,35 @@
-version=2.2.1
+version=2.3.2
 align = more
 maxColumn = 100
-docstrings = ScalaDoc
-align.openParenDefnSite = false
-align.openParenCallSite = false
-align.arrowEnumeratorGenerator = true
-newlines.alwaysBeforeTopLevelStatements = true
-continuationIndent.defnSite = 4
-spaces.inParentheses = true
-spaces.inImportCurlyBraces = true
-spaces.afterSymbolicDefs = true
-spaces.afterTripleEquals = true
-spaces.beforeContextBoundColon = true
+docstrings = JavaDoc
+
+align {
+  openParenDefnSite = false
+  openParenCallSite = false
+  arrowEnumeratorGenerator = true
+}
+
+newlines {
+  alwaysBeforeTopLevelStatements = true
+}
+continuationIndent {
+  defnSite = 4
+}
+
+spaces {
+  inParentheses = true
+  inImportCurlyBraces = true
+  afterSymbolicDefs = true
+  afterTripleEquals = true
+  beforeContextBoundColon = true
+  afterKeywordBeforeParen = true
+  inByNameTypes = true
+}
+
+
 trailingCommas = never
 
-verticalMultiline.atDefnSite = false
-verticalMultiline.newlineBeforeImplicitKW = true
+verticalMultiline {
+  atDefnSite = false
+  newlineBeforeImplicitKW = true
+}
