--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,17 +1,17 @@
-name: Scala CI
+name: tests and formatting
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Run tests
-      run: sbt +test
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Run tests
+        run: sbt test
+      - name: Check formatting
+        run: sbt scalafmtCheckAll
