--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,7 @@
 version = 3.0.0-RC4
 align = more
 maxColumn = 100
-docstrings = JavaDoc
+docstrings.style = Asterisk
 
 align {
   openParenDefnSite = false
