--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,8 @@
-version = 3.0.0-RC4
+version = 3.0.0-RC5
 align = more
 maxColumn = 100
 docstrings.style = Asterisk
+runner.dialect = Scala3
 
 align {
   openParenDefnSite = false
@@ -9,9 +10,6 @@ align {
   arrowEnumeratorGenerator = true
 }
 
-newlines {
-  alwaysBeforeTopLevelStatements = true
-}
 continuationIndent {
   defnSite = 4
 }
